Got a crappy login system working

--- a/app/templates/app/landing.html
+++ b/app/templates/app/landing.html
@@ -7,6 +7,7 @@
       Logged in!
       Start:{{ id }}:end
       Start:{{ token }}:end
+      Number of Matches: {{ matches }}
     </p>
   </body>
 </html>
