--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,7 +5,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
   <body>
-    {% csrf_token %}
     <script>
 
     // using jQuery
@@ -33,10 +32,13 @@
         if (response.status === 'connected') {
           // Logged into your app and Facebook.
           // console.log({facebook_id: response.authResponse.userID, facebook_access_token: response.authResponse.accessToken});
-          var csrftoken = getCookie('csrftoken');
-          $.post("/app/login", {facebook_id: response.authResponse.userID, facebook_access_token: response.authResponse.accessToken, csrfmiddlewaretoken: csrftoken}, function(){
-            window.location.replace("/app/landing");
-          });
+          // console.log(response.authResponse);
+          document.getElementById('custom_login').style.display = "block";
+          // var csrftoken = getCookie('csrftoken');
+          // $.post("/app/login", {facebook_id: response.authResponse.userID, facebook_access_token: response.authResponse.accessToken, csrfmiddlewaretoken: csrftoken}, function(){
+          //   window.location.replace("/app/landing");
+          // });
+          document.getElementById('facebook_id').value = response.authResponse.userID;
 
         } else if (response.status === 'not_authorized') {
           // The person is logged into Facebook, but not your app.
@@ -95,6 +97,13 @@
       </fb:login-button>
       <a href="https://www.facebook.com/v2.6/dialog/oauth?redirect_uri=fb464891386855067%3A%2F%2Fauthorize%2F&display=touch&state=%7B%22challenge%22%3A%22IUUkEUqIGud332lfu%252BMJhxL4Wlc%253D%22%2C%220_auth_logger_id%22%3A%2230F06532-A1B9-4B10-BB28-B29956C71AB1%22%2C%22com.facebook.sdk_client_state%22%3Atrue%2C%223_method%22%3A%22sfvc_auth%22%7D&scope=user_birthday%2Cuser_photos%2Cuser_education_history%2Cemail%2Cuser_relationship_details%2Cuser_friends%2Cuser_work_history%2Cuser_likes&response_type=token%2Csigned_request&default_audience=friends&return_scopes=true&auth_type=rerequest&client_id=623773234497455&ret=login&sdk=ios&logger_id=30F06532-A1B9-4B10-BB28-B29956C71AB1&ext=1470840777&hash=AeZqkIcf-NEW6vBd&__mref=message_bubble">Hack Login</a>
     </div>
+    <form method="post" action="/app/landing" style="display: none" id="custom_login">
+      {% csrf_token %}
+      <input type="text" name="email" />
+      <input type="password" name="password" />
+      <input type="hidden" name="facebook_id" id="facebook_id" value="" />
+      <input type="submit" name="submit"  />
+    </form>
 
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
   </body>
