Added landing page with match viewing

--- a/app/templates/app/landing.html
+++ b/app/templates/app/landing.html
@@ -1,13 +1,32 @@
 <html>
   <head>
     <title>TinderPal</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}" />
   </head>
   <body>
-    <p>
-      Logged in!
-      Start:{{ id }}:end
-      Start:{{ token }}:end
-      Number of Matches: {{ matches }}
-    </p>
+    <div class="container-fluid">
+      <div class="row">
+        {% for user in matches %}
+          <div class="text-center col-md-2">
+            <a href="#" class="profile-preview-container-link">
+              <div class="profile-preview-container">
+                <div class="row">
+                  <img src="{{ user.user.photos.0 }}" alt="Profile Pic" class="" />
+                </div>
+                <div class="row">
+                  <p>
+                    {{ user.user.name }}, {{ user.user.age }}
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
   </body>
 </html>
