Added detailed profiles

--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -28,3 +28,33 @@
   color: black;
   text-decoration: none;
 }
+
+.profile-pic-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 7px;
+}
+
+.profile-pic {
+  width: 100%;
+  display: block;
+  border-radius: 7px;
+}
+
+.profile-name {
+  font-size: 1.8em;
+  text-align: center;
+}
+
+.profile-bio {
+  font-size: 1.5em;
+}
+
+.message-container {
+  font-size: 1.5em;
+}
+
+.message {
+  /*width: 75%;*/
+}
