--- a/app/templates/app/landing.html
+++ b/app/templates/app/landing.html
@@ -12,7 +12,7 @@
       <div class="row">
         {% for user in matches %}
           <div class="text-center col-md-2">
-            <a href="#" class="profile-preview-container-link">
+            <a href="{{ forloop.counter0 }}/profile" class="profile-preview-container-link">
               <div class="profile-preview-container">
                 <div class="row">
                   <img src="{{ user.user.photos.0 }}" alt="Profile Pic" class="" />
