--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -10,6 +10,11 @@
   <body>
     <div class="container-fluid">
       <div class="row">
+        {% for i in padding %}
+          <div class="col-md-1">
+
+          </div>
+        {% endfor %}
         {% for url in user.photos %}
           <div class="col-md-2">
             <div class="profile-pic-container">
@@ -19,19 +24,32 @@
         {% endfor %}
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <p class="profile-name">
             {{ user.name }}, {{ user.age }}
           </p>
           <p class="profile-bio">
-            {{ user.bio}}
+            {% if user.bio %}
+              {{ user.bio }}
+            {% else %}
+              This person has no bio.
+            {% endif%}
           </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
+          <form>
+            <h4>Choose a category:</h4>
+            <input type="radio" name="category" id="funny-cat" /><label for="funny-cat">Funny</label><br />
+            <input type="radio" name="category" id="serious-cat" /><label for="serious-cat">Serious</label><br />
+
+            <button type="submit" name="submit" class="btn btn-default">Get Opener</button>
+          </form>
+        </div>
+        <div class="col-md-6">
           <ul class="list-group message-container">
             {% for message in messages %}
-              <li class="list-group-item message {% if message.sender.name == user.name %} list-group-item-info {% endif %}">
-                {{ message.sender.name }}: {{ message.body }}
+              <li class="list-group-item message {% if message.sender.name == user.name %} list-group-item-info text-right {% else %}  {% endif %}">
+                {{ message.body }}
               </li>
             {% empty %}
               <li class="list-group-item">
@@ -39,9 +57,6 @@
               </li>
             {% endfor %}
           </ul>
-        </div>
-        <div class="col-md-4">
-
         </div>
       </div>
     </div>
