--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -19,7 +19,9 @@
   padding-top: 10px;
 }
 
-.profile-preview-container-link {
+.profile-preview-container-link,
+.profile-preview-container-link:active,
+.profile-preview-container-link:visited {
   color: black;
   text-decoration: none;
 }
