--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -37,13 +37,15 @@
           </p>
         </div>
         <div class="col-md-3">
-          <form>
+          <form method="post" action="/app/{{ id }}/category-select/">
+            {% csrf_token %}
             <h4>Choose a category:</h4>
-            <input type="radio" name="category" id="funny-cat" /><label for="funny-cat">Funny</label><br />
-            <input type="radio" name="category" id="serious-cat" /><label for="serious-cat">Serious</label><br />
+            <input  value="funny" type="radio" name="category" id="funny-cat" /><label for="funny-cat">Funny</label><br />
+            <input value="lifestyle" type="radio" name="category" id="lifestyle-cat" /><label for="lifestyle-cat">Lifestyle</label><br />
 
             <button type="submit" name="submit" class="btn btn-default">Get Opener</button>
           </form>
+          <p> {{ line_option }} </p>
         </div>
         <div class="col-md-6">
           <ul class="list-group message-container">
