--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -102,7 +102,7 @@
       <input type="text" name="email" />
       <input type="password" name="password" />
       <input type="hidden" name="facebook_id" id="facebook_id" value="" />
-      <input type="submit" name="submit"  />
+      <input type="submit" name="submit" value="Login"  />
     </form>
 
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
